@@ -58,6 +58,35 @@ main(int argc, char **argv)
         printf(";%d", *p);
     }
 
+    // complex LHS
+    {
+        int x = 0;
+        int *p = &x;
+
+        *p += 1;
+        printf(";%d", *p);
+
+        p[0] += 2;
+        printf(";%d", *p);
+
+        *&*p += 3;
+        printf(";%d", *p);
+    }
+
+    // complex LHS #2
+    {
+        int[2] a;
+
+        a[0] = 77;
+        a[1] = 78;
+
+        a[0] += 5;
+        printf(";%d", a[0]);
+
+        *(a + 1) += 3;
+        printf(";%d", a[1]);
+    }
+
     puts("");
     return 0;
 }
