@@ -1,3 +1,14 @@
+Sun Sep  7 07:37:34 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/CodeGenerator.java: opassign should
+	  not spill DX because division uses DX.
+
+	* net/loveruby/cflat/ast/PtrMemberNode.java: #dereferedType should
+	  return Type instead of ComplexType because DereferenceChecker
+	  checks derefered type by this method.
+
+	* test: test ptr->memb with complex pointer expression.
+
 Sun Sep  7 06:50:56 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/CodeGenerator.java: calculate LHS
